--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -3,154 +3,68 @@ Pos=0,0
 Size=1920,1017
 Collapsed=0
 
+[Window][Content Browser]
+Pos=0,799
+Size=1555,218
+Collapsed=0
+DockId=0x00000002,0
+
 [Window][Debug##Default]
-Pos=26,340
+Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Settings]
-Pos=1562,781
-Size=358,236
-Collapsed=0
-DockId=0x00000006,1
-
 [Window][Stats]
-Pos=1562,781
-Size=358,236
+Pos=1557,799
+Size=363,218
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000008,1
+
+[Window][Scene Settings]
+Pos=1557,339
+Size=363,458
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][Settings]
+Pos=1557,799
+Size=363,218
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Editor Preferences]
+Pos=1557,799
+Size=363,218
+Collapsed=0
+DockId=0x00000008,2
 
 [Window][Viewport]
 Pos=0,22
-Size=1560,757
+Size=1555,775
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
-Pos=1562,22
-Size=358,339
+Pos=1557,22
+Size=363,315
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Properties]
+Pos=1557,339
+Size=363,458
 Collapsed=0
 DockId=0x00000007,0
 
-[Window][Properties]
-Pos=1562,363
-Size=358,416
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Dear ImGui Demo]
-Pos=423,63
-Size=878,615
-Collapsed=0
-
-[Window][Example: Documents]
-ViewportPos=234,182
-ViewportId=0x1FD64BEB
-Size=589,1034
-Collapsed=0
-
-[Window][Example: Custom rendering]
-Pos=60,60
-Size=420,424
-Collapsed=0
-
-[Window][Same title as another window##2]
-Pos=161,124
-Size=346,70
-Collapsed=1
-
-[Window][Same title as another window##1]
-Pos=137,206
-Size=346,70
-Collapsed=1
-
-[Window][###AnimatedTitle]
-Pos=303,281
-Size=196,54
-Collapsed=1
-
-[Window][Example: Constrained Resize]
-Pos=79,59
-Size=447,380
-Collapsed=0
-
-[Window][Example: Auto-resizing window]
-Pos=60,60
-Size=367,512
-Collapsed=0
-
-[Window][Example: Long text display]
-Pos=60,60
-Size=520,600
-Collapsed=0
-
-[Window][Example: Property editor]
-Pos=101,185
-Size=430,450
-Collapsed=0
-
-[Window][Example: Simple layout]
-Pos=60,60
-Size=500,440
-Collapsed=0
-
-[Window][Components]
-Pos=1242,639
-Size=358,101
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Example: Console]
-Pos=750,170
-Size=520,600
-Collapsed=0
-
-[Window][Stacked 1]
-Pos=457,381
-Size=333,222
-Collapsed=0
-
-[Window][Stacked 2]
-Pos=706,410
-Size=190,80
-Collapsed=0
-
-[Window][About Dear ImGui]
-Pos=300,98
-Size=483,118
-Collapsed=0
-
-[Window][Help]
+[Window][Texture Viewer]
 Pos=0,22
-Size=1560,757
+Size=1259,775
 Collapsed=0
 DockId=0x00000009,1
 
-[Window][Editor Preferences]
-Pos=1562,781
-Size=358,236
-Collapsed=0
-DockId=0x00000006,2
-
-[Window][Delete?]
-Pos=828,440
-Size=264,136
-Collapsed=0
-
-[Window][Scene Settings]
-Pos=1562,363
-Size=358,416
-Collapsed=0
-DockId=0x00000001,1
-
-[Window][Error]
-Pos=777,466
-Size=365,84
-Collapsed=0
-
-[Window][Content Browser]
-Pos=0,781
-Size=1560,236
+[Window][Details]
+Pos=1261,22
+Size=294,775
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -159,28 +73,16 @@ Pos=764,466
 Size=392,84
 Collapsed=0
 
-[Window][Texture View]
-Pos=0,22
-Size=1556,789
-Collapsed=0
-DockId=0x00000009,1
-
-[Window][Texture Viewer]
-Pos=0,22
-Size=1560,757
-Collapsed=0
-DockId=0x00000009,1
-
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=X Selected=0x968648AE
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=1560,701 Split=Y Selected=0x995B0CF8
-    DockNode      ID=0x00000009 Parent=0x00000003 SizeRef=1570,757 CentralNode=1 Selected=0x995B0CF8
-    DockNode      ID=0x0000000A Parent=0x00000003 SizeRef=1570,236 Selected=0x371352B7
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=358,701 Split=Y Selected=0x9A68760C
-    DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=195,757 Split=Y Selected=0x9A68760C
-      DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=347,339 Selected=0x9A68760C
-      DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=347,416 Split=Y Selected=0xC89E3217
-        DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=358,255 Selected=0xC89E3217
-        DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=358,101 Selected=0xA115F62D
-    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=195,236 Selected=0x4D6123BB
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=X
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1555,995 Split=Y
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1920,775 Split=X Selected=0xBCCCB87B
+      DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1259,775 CentralNode=1 Selected=0x995B0CF8
+      DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=294,775 Selected=0xBD9B3216
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1920,218 Selected=0x371352B7
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=363,995 Split=Y Selected=0x9A68760C
+    DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=521,315 Selected=0x9A68760C
+    DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=521,678 Split=Y Selected=0xC89E3217
+      DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,458 Selected=0xC89E3217
+      DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,218 Selected=0x1C33C293
 
