--- a/Eagle-Editor/Engine/EditorDefault.ini
+++ b/Eagle-Editor/Engine/EditorDefault.ini
@@ -1,5 +1,6 @@
 OpenedScenePath: assets\scenes\3DScene.eagle
 WindowSize: [1920, 1017]
+WindowMaximized: true
 WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 0
