--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -4,8 +4,8 @@ Size=1920,1017
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,799
-Size=1555,218
+Pos=0,808
+Size=1494,209
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,56 +15,56 @@ Size=400,400
 Collapsed=0
 
 [Window][Stats]
-Pos=1557,829
-Size=363,188
+Pos=1496,808
+Size=424,209
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Scene Settings]
-Pos=1557,433
-Size=363,394
+Pos=1496,433
+Size=424,373
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Settings]
-Pos=1557,829
-Size=363,188
+Pos=1496,808
+Size=424,209
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Editor Preferences]
-Pos=1557,829
-Size=363,188
+Pos=1496,808
+Size=424,209
 Collapsed=0
 DockId=0x00000008,2
 
 [Window][Viewport]
 Pos=0,59
-Size=1555,738
+Size=1494,747
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
-Pos=1557,59
-Size=363,372
+Pos=1496,59
+Size=424,372
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1557,433
-Size=363,394
+Pos=1496,433
+Size=424,373
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Texture Viewer]
-Pos=0,22
-Size=1259,775
+Pos=0,59
+Size=1210,747
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][Details]
-Pos=1261,22
-Size=294,775
+Pos=1212,59
+Size=282,747
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -79,18 +79,23 @@ Size=1920,35
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][Help]
+Pos=60,60
+Size=749,350
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=Y
   DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,35 HiddenTabBar=1 Selected=0x16C8A02A
   DockNode        ID=0x0000000C Parent=0x3BC79352 SizeRef=1920,958 Split=X
-    DockNode      ID=0x00000003 Parent=0x0000000C SizeRef=1555,995 Split=X
-      DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=1259,775 Split=Y Selected=0x995B0CF8
-        DockNode  ID=0x00000001 Parent=0x00000009 SizeRef=1544,738 CentralNode=1 HiddenTabBar=1 Selected=0x995B0CF8
-        DockNode  ID=0x00000002 Parent=0x00000009 SizeRef=1544,218 Selected=0x371352B7
-      DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=294,775 Selected=0xBD9B3216
-    DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=363,995 Split=Y Selected=0x9A68760C
+    DockNode      ID=0x00000003 Parent=0x0000000C SizeRef=1494,995 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1544,747 Split=X Selected=0xBCCCB87B
+        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1210,738 CentralNode=1 Selected=0x995B0CF8
+        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=282,738 Selected=0xBD9B3216
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1544,209 Selected=0x371352B7
+    DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=424,995 Split=Y Selected=0x9A68760C
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=521,372 Selected=0x9A68760C
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=521,584 Split=Y Selected=0xC89E3217
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,458 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,218 Selected=0x4D6123BB
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,373 Selected=0xC89E3217
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,209 Selected=0x4D6123BB
 
