Moved non-engine related assets to 'Sandbox/Content'. Updated ContentBrowserPanel code to view from Sandbox/Content. Moved away TextureViewer code to Eagle::UI::TextureViewer. Updated Scenes and premake

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -97,5 +97,5 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=Y
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=521,372 Selected=0x9A68760C
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=521,584 Split=Y Selected=0xC89E3217
         DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,373 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,209 Selected=0x4D6123BB
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,209 Selected=0x1C33C293
 
