--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -1,4 +1,4 @@
-OpenedScenePath: assets\scenes\3DScene.eagle
+OpenedScenePath: ..\Sandbox\Content\Scenes\3DScene.eagle
 WindowSize: [1920, 1017]
 WindowMaximized: true
 WindowPos: [0, 23]
