Fixed ContentBrowser bug when pressing history button could crash editor. Minor improvements. Tasks 5-6 of #70

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -84,6 +84,11 @@ Pos=60,60
 Size=749,350
 Collapsed=0
 
+[Window][Shaders]
+Pos=272,172
+Size=290,346
+Collapsed=0
+
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=Y
   DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,35 HiddenTabBar=1 Selected=0x16C8A02A
