Fixed physics bug duplicating colliders. Added 'OnRemoved' function to Component which is called when component is removed (not when entity is being destroyed). Updated 3DScene.

--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -1,8 +1,8 @@
 OpenedScenePath: ..\Sandbox\Content\Scenes\3DScene.eagle
-WindowSize: [1920, 1001]
+WindowSize: [1920, 1017]
 WindowMaximized: true
-WindowPos: [0, 29]
+WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
-GuizmoType: 7
+GuizmoType: 0
 Style: 0
-VSync: true
+VSync: false
