--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -1,11 +1,11 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1017
+Size=1920,1001
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,808
-Size=1494,209
+Pos=0,776
+Size=1494,225
 Collapsed=0
 DockId=0x00000002,0
 
@@ -15,67 +15,67 @@ Size=400,400
 Collapsed=0
 
 [Window][Stats]
-Pos=1496,808
-Size=424,209
+Pos=1496,774
+Size=424,227
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000008,2
 
 [Window][Scene Settings]
-Pos=1496,433
-Size=424,373
+Pos=1496,432
+Size=424,340
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Settings]
-Pos=1496,808
-Size=424,209
+Pos=1496,774
+Size=424,227
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Editor Preferences]
-Pos=1496,808
-Size=424,209
+Pos=1496,774
+Size=424,227
 Collapsed=0
-DockId=0x00000008,2
+DockId=0x00000008,1
 
 [Window][Viewport]
-Pos=0,59
-Size=1494,747
+Pos=0,68
+Size=1494,706
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Scene Hierarchy]
-Pos=1496,59
-Size=424,372
+Pos=1496,68
+Size=424,362
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Properties]
-Pos=1496,433
-Size=424,373
+Pos=1496,432
+Size=424,340
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Texture Viewer]
-Pos=0,59
-Size=1234,747
+Pos=0,68
+Size=1234,727
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][Details]
-Pos=1236,59
-Size=258,747
+Pos=1236,68
+Size=258,727
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Eagle-Editor]
-Pos=764,466
-Size=392,84
+Pos=760,449
+Size=400,102
 Collapsed=0
 
 [Window][##tool_bar]
-Pos=0,22
-Size=1920,35
+Pos=0,26
+Size=1920,40
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -90,17 +90,17 @@ Size=290,346
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=1920,995 Split=Y
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,55 Size=1920,975 Split=Y
   DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,35 HiddenTabBar=1 Selected=0x16C8A02A
   DockNode        ID=0x0000000C Parent=0x3BC79352 SizeRef=1920,958 Split=X
     DockNode      ID=0x00000003 Parent=0x0000000C SizeRef=1494,995 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1544,747 Split=X Selected=0xBCCCB87B
+      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1544,706 Split=X Selected=0xBCCCB87B
         DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1234,747 CentralNode=1 Selected=0x995B0CF8
         DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=258,747 Selected=0xBD9B3216
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1544,209 Selected=0x371352B7
+      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1544,225 Selected=0x371352B7
     DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=424,995 Split=Y Selected=0x9A68760C
       DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=521,372 Selected=0x9A68760C
       DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=521,584 Split=Y Selected=0xC89E3217
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,373 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,209 Selected=0x4D6123BB
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,340 Selected=0xC89E3217
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,227 Selected=0x1C33C293
 
