--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -1,7 +1,7 @@
-OpenedScenePath: ..\Sandbox\Content\Scenes\3DScene.eagle
-WindowSize: [1920, 1017]
+OpenedScenePath: ..\SandBox\Content\Scenes\test.eagle
+WindowSize: [1920, 1001]
 WindowMaximized: true
-WindowPos: [0, 23]
+WindowPos: [0, 29]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 0
 Style: 0
