--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -3,6 +3,7 @@ WindowSize: [2560, 1377]
 WindowMaximized: true
 WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
-GuizmoType: -1
+GuizmoType: 120
 Style: 0
 VSync: false
+SoftShadows: true
