--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -1,106 +1,107 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1920,1001
+Size=2560,1377
 Collapsed=0
-
-[Window][Content Browser]
-Pos=0,776
-Size=1494,225
-Collapsed=0
-DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Stats]
-Pos=1496,774
-Size=424,227
-Collapsed=0
-DockId=0x00000008,2
-
 [Window][Scene Settings]
-Pos=1496,432
-Size=424,340
+Pos=2164,582
+Size=396,471
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Settings]
-Pos=1496,774
-Size=424,227
+Pos=2164,1055
+Size=396,322
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Editor Preferences]
-Pos=1496,774
-Size=424,227
+Pos=2164,1055
+Size=396,322
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][Viewport]
-Pos=0,68
-Size=1494,706
+Pos=0,64
+Size=2162,989
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][##tool_bar]
+Pos=0,22
+Size=2560,40
 Collapsed=0
 DockId=0x00000009,0
 
-[Window][Scene Hierarchy]
-Pos=1496,68
-Size=424,362
-Collapsed=0
-DockId=0x00000005,0
-
 [Window][Properties]
-Pos=1496,432
-Size=424,340
+Pos=2164,582
+Size=396,471
 Collapsed=0
 DockId=0x00000007,0
 
-[Window][Texture Viewer]
-Pos=0,68
-Size=1234,727
+[Window][Content Browser]
+Pos=0,1055
+Size=2162,322
 Collapsed=0
-DockId=0x00000009,1
+DockId=0x00000004,0
 
-[Window][Details]
-Pos=1236,68
-Size=258,727
+[Window][Scene Hierarchy]
+Pos=2164,64
+Size=396,516
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000005,0
 
-[Window][Eagle-Editor]
-Pos=760,449
-Size=400,102
+[Window][Stats]
+Pos=2164,1055
+Size=396,322
+Collapsed=0
+DockId=0x00000008,2
+
+[Window][CPU Timings]
+Pos=60,60
+Size=723,756
 Collapsed=0
 
-[Window][##tool_bar]
-Pos=0,26
-Size=1920,40
+[Window][GPU Timings]
+Pos=60,60
+Size=501,493
 Collapsed=0
-DockId=0x0000000B,0
 
 [Window][Help]
 Pos=60,60
-Size=749,350
+Size=811,387
 Collapsed=0
 
-[Window][Shaders]
-Pos=990,297
-Size=290,346
+[Window][Details]
+Pos=1499,104
+Size=271,899
 Collapsed=0
+DockId=0x0000000D,0
+
+[Window][Texture Viewer]
+Pos=509,104
+Size=988,899
+Collapsed=0
+DockId=0x0000000C,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,55 Size=1920,975 Split=Y
-  DockNode        ID=0x0000000B Parent=0x3BC79352 SizeRef=1920,35 HiddenTabBar=1 Selected=0x16C8A02A
-  DockNode        ID=0x0000000C Parent=0x3BC79352 SizeRef=1920,958 Split=X
-    DockNode      ID=0x00000003 Parent=0x0000000C SizeRef=1494,995 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1544,706 Split=X Selected=0xBCCCB87B
-        DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=1234,747 CentralNode=1 Selected=0x995B0CF8
-        DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=258,747 Selected=0xBD9B3216
-      DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1544,225 Selected=0x371352B7
-    DockNode      ID=0x00000004 Parent=0x0000000C SizeRef=424,995 Split=Y Selected=0x9A68760C
-      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=521,372 Selected=0x9A68760C
-      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=521,584 Split=Y Selected=0xC89E3217
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=521,340 Selected=0xC89E3217
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=521,227 Selected=0x1C33C293
+DockNode          ID=0x0000000B Pos=509,127 Size=1261,899 Split=X
+  DockNode        ID=0x0000000C Parent=0x0000000B SizeRef=988,674 Selected=0x5B2DE888
+  DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=271,674 Selected=0xFC3EA205
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=2560,1355 Split=Y Selected=0x13926F0B
+  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
+  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=2560,1313 Split=X
+    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=2162,1355 Split=Y Selected=0x13926F0B
+      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2435,989 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=2435,322 Selected=0xBF096F38
+    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=396,1355 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=396,516 Selected=0x2E9237F7
+      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=396,795 Split=Y Selected=0x413E6147
+        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=396,494 Selected=0x199AB496
+        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=396,337 Selected=0x2E4EBCAA
 
