--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -1,9 +1,9 @@
-OpenedScenePath: ..\Sandbox\Content\Scenes\test_ibl.eagle
+OpenedScenePath: ..\Sandbox\Content\Scenes\3DScene.eagle
 WindowSize: [2560, 1377]
 WindowMaximized: true
 WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
 Style: 0
-VSync: true
+VSync: false
 SoftShadows: true
