Fixed broken `Simulation` after rendering refactoring

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -1,4 +1,4 @@
-[Window][DockSpace Demo]
+[Window][Eagle_DockspaceWindow]
 Pos=0,0
 Size=2560,1377
 Collapsed=0
@@ -9,99 +9,100 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=2164,582
-Size=396,471
+Pos=2165,589
+Size=395,540
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000005,1
 
 [Window][Settings]
-Pos=2164,1055
-Size=396,322
+Pos=2165,1131
+Size=395,246
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Window][Editor Preferences]
-Pos=2164,1055
-Size=396,322
+Pos=2165,1131
+Size=395,246
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000006,1
+
+[Window][Stats]
+Pos=2165,1131
+Size=395,246
+Collapsed=0
+DockId=0x00000006,2
 
 [Window][Viewport]
 Pos=0,64
-Size=2162,989
+Size=2163,1032
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000007,0
 
 [Window][##tool_bar]
 Pos=0,22
 Size=2560,40
 Collapsed=0
-DockId=0x00000009,0
-
-[Window][Properties]
-Pos=2164,582
-Size=396,471
-Collapsed=0
-DockId=0x00000007,0
-
-[Window][Content Browser]
-Pos=0,1055
-Size=2162,322
-Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000C,0
+ClassId=0x0000007B
 
 [Window][Scene Hierarchy]
-Pos=2164,64
-Size=396,516
+Pos=2165,64
+Size=395,523
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Properties]
+Pos=2165,589
+Size=395,540
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Stats]
-Pos=2164,1055
-Size=396,322
+[Window][Content Browser]
+Pos=0,1098
+Size=2163,279
 Collapsed=0
-DockId=0x00000008,2
+DockId=0x00000008,0
+
+[Window][Texture Viewer]
+Pos=373,225
+Size=941,751
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Details]
+Pos=1316,225
+Size=361,751
+Collapsed=0
+DockId=0x0000000B,0
 
 [Window][CPU Timings]
 Pos=60,60
-Size=723,756
+Size=641,744
 Collapsed=0
 
 [Window][GPU Timings]
 Pos=60,60
-Size=501,493
+Size=664,578
 Collapsed=0
 
 [Window][Help]
 Pos=60,60
-Size=811,387
+Size=799,348
 Collapsed=0
-
-[Window][Details]
-Pos=1499,104
-Size=271,899
-Collapsed=0
-DockId=0x0000000D,0
-
-[Window][Texture Viewer]
-Pos=509,104
-Size=988,899
-Collapsed=0
-DockId=0x0000000C,0
 
 [Docking][Data]
-DockNode          ID=0x0000000B Pos=509,127 Size=1261,899 Split=X
-  DockNode        ID=0x0000000C Parent=0x0000000B SizeRef=988,674 Selected=0x5B2DE888
-  DockNode        ID=0x0000000D Parent=0x0000000B SizeRef=271,674 Selected=0xFC3EA205
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,45 Size=2560,1355 Split=Y Selected=0x13926F0B
-  DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
-  DockNode        ID=0x0000000A Parent=0x3BC79352 SizeRef=2560,1313 Split=X
-    DockNode      ID=0x00000001 Parent=0x0000000A SizeRef=2162,1355 Split=Y Selected=0x13926F0B
-      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=2435,989 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=2435,322 Selected=0xBF096F38
-    DockNode      ID=0x00000002 Parent=0x0000000A SizeRef=396,1355 Split=Y Selected=0x2E9237F7
-      DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=396,516 Selected=0x2E9237F7
-      DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=396,795 Split=Y Selected=0x413E6147
-        DockNode  ID=0x00000007 Parent=0x00000006 SizeRef=396,494 Selected=0x199AB496
-        DockNode  ID=0x00000008 Parent=0x00000006 SizeRef=396,337 Selected=0x2E4EBCAA
+DockNode          ID=0x00000009 Pos=373,248 Size=1304,751 Split=X
+  DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=941,424 Selected=0x5B2DE888
+  DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=361,424 Selected=0xFC3EA205
+DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=Y Selected=0x13926F0B
+  DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
+  DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
+    DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2163,1355 Split=Y Selected=0x13926F0B
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1032 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,279 Selected=0xBF096F38
+    DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=395,1355 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,523 Selected=0x2E9237F7
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,788 Split=Y Selected=0x199AB496
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,609 Selected=0x199AB496
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,278 Selected=0x2E4EBCAA
 
