Bloom + improvements + fixes
- Added bloom
- Moved serialization code into its own file so it's reusable
- Improved skybox sampling (rendering)
- Fixed incorrect vulkan clear operation
- Fixed vulkan image copy
- Other vulkan fixes & improvements

--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -7,3 +7,11 @@ GuizmoType: 7
 Style: 0
 VSync: false
 SoftShadows: true
+Bloom Settings:
+  Threshold: 1.5
+  Intensity: 1
+  DirtIntensity: 1
+  Knee: 0.100000001
+  bEnable: true
+  Dirt:
+    Path: None
