--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -5,7 +5,7 @@ WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
 Style: 0
-VSync: false
+VSync: true
 SoftShadows: true
 Bloom Settings:
   Threshold: 1.5
