--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -90,6 +90,11 @@ Pos=60,60
 Size=799,348
 Collapsed=0
 
+[Window][GPU Memory usage]
+Pos=593,131
+Size=579,611
+Collapsed=0
+
 [Docking][Data]
 DockNode          ID=0x00000009 Pos=373,248 Size=1304,751 Split=X
   DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=941,424 Selected=0x5B2DE888
