--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -34,7 +34,7 @@ DockId=0x00000006,2
 
 [Window][Viewport]
 Pos=0,64
-Size=2163,1032
+Size=2163,978
 Collapsed=0
 DockId=0x00000007,0
 
@@ -43,7 +43,6 @@ Pos=0,22
 Size=2560,40
 Collapsed=0
 DockId=0x0000000C,0
-ClassId=0x0000007B
 
 [Window][Scene Hierarchy]
 Pos=2165,64
@@ -58,8 +57,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,1098
-Size=2163,279
+Pos=0,1044
+Size=2163,333
 Collapsed=0
 DockId=0x00000008,0
 
@@ -95,6 +94,12 @@ Pos=593,131
 Size=579,611
 Collapsed=0
 
+[Window][Console]
+Pos=0,1044
+Size=2163,333
+Collapsed=0
+DockId=0x00000008,1
+
 [Docking][Data]
 DockNode          ID=0x00000009 Pos=373,248 Size=1304,751 Split=X
   DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=941,424 Selected=0x5B2DE888
@@ -103,8 +108,8 @@ DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=
   DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
     DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2163,1355 Split=Y Selected=0x13926F0B
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1032 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,279 Selected=0xBF096F38
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,978 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,333 Selected=0x49278EEE
     DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=395,1355 Split=Y Selected=0x2E9237F7
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,523 Selected=0x2E9237F7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,788 Split=Y Selected=0x199AB496
