--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -7,6 +7,7 @@ GuizmoType: 7
 Style: 0
 VSync: true
 SoftShadows: true
+LineWidth: 2.5
 Bloom Settings:
   Threshold: 1.5
   Intensity: 1
@@ -15,3 +16,8 @@ Bloom Settings:
   bEnable: true
   Dirt:
     Path: None
+SSAO Settings:
+  Samples: 64
+  Radius: 0.5
+  Bias: 0.0250000004
+  bEnable: true
