Exposed Anisotropy to Editor (it's serializable)
- Other minor improvements

--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -20,4 +20,11 @@ SSAO Settings:
   Samples: 64
   Radius: 0.5
   Bias: 0.0250000004
+  bEnable: false
+Fog Settings:
+  Color: [1, 1, 1]
+  MinDistance: 5
+  MaxDistance: 50
+  Density: 0.0500000007
+  Equation: 0
   bEnable: true
