--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -4,10 +4,11 @@ WindowMaximized: true
 WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
-Style: 0
+Style: Default
 VSync: true
 SoftShadows: true
 LineWidth: 2.5
+AO: None
 Bloom Settings:
   Threshold: 1.5
   Intensity: 1
@@ -20,11 +21,10 @@ SSAO Settings:
   Samples: 64
   Radius: 0.5
   Bias: 0.0250000004
-  bEnable: false
 Fog Settings:
   Color: [1, 1, 1]
   MinDistance: 5
   MaxDistance: 50
   Density: 0.0500000007
-  Equation: 0
+  Equation: Linear
   bEnable: true
