--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -19,8 +19,11 @@ Bloom Settings:
     Path: None
 SSAO Settings:
   Samples: 64
-  Radius: 0.5
+  Radius: 0.300000012
   Bias: 0.0250000004
+GTAO Settings:
+  Samples: 8
+  Radius: 0.5
 Fog Settings:
   Color: [1, 1, 1]
   MinDistance: 5
