--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -7,6 +7,7 @@ GuizmoType: 7
 Style: Default
 VSync: true
 SoftShadows: true
+ShadowsSmoothTransition: true
 LineWidth: 2.5
 GridScale: 16
 AO: None
