--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=2165,589
-Size=395,540
+Pos=2165,467
+Size=395,605
 Collapsed=0
 DockId=0x00000005,1
 
-[Window][Settings]
-Pos=2165,1131
-Size=395,246
+[Window][Renderer Settings]
+Pos=2165,467
+Size=395,605
+Collapsed=0
+DockId=0x00000005,2
+
+[Window][Editor Preferences]
+Pos=2165,1074
+Size=395,303
 Collapsed=0
 DockId=0x00000006,0
 
-[Window][Editor Preferences]
-Pos=2165,1131
-Size=395,246
+[Window][Stats]
+Pos=2165,1074
+Size=395,303
 Collapsed=0
 DockId=0x00000006,1
 
-[Window][Stats]
-Pos=2165,1131
-Size=395,246
-Collapsed=0
-DockId=0x00000006,2
-
 [Window][Viewport]
 Pos=0,64
-Size=2163,978
+Size=2163,1008
 Collapsed=0
 DockId=0x00000007,0
 
@@ -46,19 +46,19 @@ DockId=0x0000000C,0
 
 [Window][Scene Hierarchy]
 Pos=2165,64
-Size=395,523
+Size=395,401
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=2165,589
-Size=395,540
+Pos=2165,467
+Size=395,605
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,1044
-Size=2163,333
+Pos=0,1074
+Size=2163,303
 Collapsed=0
 DockId=0x00000008,0
 
@@ -80,8 +80,8 @@ Size=641,744
 Collapsed=0
 
 [Window][GPU Timings]
-Pos=60,60
-Size=664,578
+Pos=899,85
+Size=664,530
 Collapsed=0
 
 [Window][Help]
@@ -90,13 +90,13 @@ Size=799,348
 Collapsed=0
 
 [Window][GPU Memory usage]
-Pos=593,131
-Size=579,611
+Pos=847,638
+Size=579,302
 Collapsed=0
 
 [Window][Console]
-Pos=0,1044
-Size=2163,333
+Pos=0,1074
+Size=2163,303
 Collapsed=0
 DockId=0x00000008,1
 
@@ -108,11 +108,11 @@ DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=
   DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
     DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2163,1355 Split=Y Selected=0x13926F0B
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,978 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,333 Selected=0x49278EEE
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1008 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0x49278EEE
     DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=395,1355 Split=Y Selected=0x2E9237F7
-      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,523 Selected=0x2E9237F7
-      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,788 Split=Y Selected=0x199AB496
-        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,609 Selected=0x199AB496
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,278 Selected=0x2E4EBCAA
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,401 Selected=0x2E9237F7
+      DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,910 Split=Y Selected=0x199AB496
+        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,605 Selected=0x199AB496
+        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,303 Selected=0x2E4EBCAA
 
