Now GPU driver & API are displayed correctly

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -34,7 +34,7 @@ DockId=0x00000006,1
 
 [Window][Viewport]
 Pos=0,64
-Size=2163,1008
+Size=2163,1009
 Collapsed=0
 DockId=0x00000007,0
 
@@ -57,8 +57,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
-Pos=0,1074
-Size=2163,303
+Pos=0,1075
+Size=2163,302
 Collapsed=0
 DockId=0x00000008,0
 
@@ -75,18 +75,18 @@ Collapsed=0
 DockId=0x0000000B,0
 
 [Window][CPU Timings]
-Pos=60,60
+Pos=59,58
 Size=641,744
 Collapsed=0
 
 [Window][GPU Timings]
-Pos=899,85
+Pos=1465,79
 Size=664,530
 Collapsed=0
 
 [Window][Help]
-Pos=60,60
-Size=799,348
+Pos=699,201
+Size=959,227
 Collapsed=0
 
 [Window][GPU Memory usage]
@@ -95,10 +95,20 @@ Size=579,302
 Collapsed=0
 
 [Window][Console]
-Pos=0,1074
-Size=2163,303
+Pos=0,1075
+Size=2163,302
 Collapsed=0
 DockId=0x00000008,1
+
+[Window][Eagle-Editor]
+Pos=1144,643
+Size=272,90
+Collapsed=0
+
+[Window][Eagle Editor]
+Pos=1084,646
+Size=392,84
+Collapsed=0
 
 [Docking][Data]
 DockNode          ID=0x00000009 Pos=373,248 Size=1304,751 Split=X
@@ -108,8 +118,8 @@ DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=
   DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
     DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2163,1355 Split=Y Selected=0x13926F0B
-      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1008 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0x49278EEE
+      DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1009 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,302 Selected=0x49278EEE
     DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=395,1355 Split=Y Selected=0x2E9237F7
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,401 Selected=0x2E9237F7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,910 Split=Y Selected=0x199AB496
