--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -1,6 +1,6 @@
 OpenedScenePath: ..\Sandbox\Content\Scenes\Demo.eagle
-WindowSize: [2560, 1377]
-WindowMaximized: true
+WindowSize: [1280, 720]
+WindowMaximized: false
 WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
@@ -14,7 +14,7 @@ EnableObjectPicking: true
 Enable2DObjectPicking: false
 LineWidth: 2.5
 GridScale: 16
-TransparencyLayers: 4
+TransparencyLayers: 2
 AO: None
 AA: None
 Gamma: 2.20000005
@@ -49,13 +49,13 @@ Volumetric Light Settings:
   bFogEnable: true
   bEnable: true
 Shadow Settings:
-  PointLightSize: 2048
-  SpotLightSize: 2048
+  PointLightSize: 1024
+  SpotLightSize: 1024
   DirLightSizes:
     - 4096
     - 2048
-    - 2048
-    - 2048
+    - 1024
+    - 1024
 PhotoLinear Tonemapping:
   Sensitivity: 0.119999997
   ExposureTime: 0.100000001
