--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -5,6 +5,7 @@ WindowPos: [0, 23]
 SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
 Style: Default
+EcoRendering: true
 VSync: true
 SoftShadows: true
 TranslucentShadows: true
