--- a/SandBox/Engine/EditorDefault.ini
+++ b/SandBox/Engine/EditorDefault.ini
@@ -6,6 +6,7 @@ SnapValues: [0.100000001, 5, 0.100000001]
 GuizmoType: 7
 Style: Default
 EcoRendering: true
+StopSimulationKey: Escape
 VSync: true
 SoftShadows: true
 TranslucentShadows: true
