Basic project system
- Added icon for .exe
- Fixed logging of path. Now it's converted to utf-8
- Added `argparse` 3rd party lib for parsing CMD args
- Added `--project` arg to open a project. Usage: `--project=path_to_egproj`
- Now `Eagle-Engine.exe` is built to `Eagle-Editor` folder
- Added a script to set up `.egproj` file association with the engine
- Renamed project's `Engine` folder to `Config`
- Docs updates

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,14 @@
 bin/
 bin-int/
 Eagle-Editor/Engine/
+Eagle-Editor/Cache/*
+Eagle-Editor/Eagle-Editor.exe
+Eagle-Editor/fmod.dll
+Eagle-Editor/fmodL.dll
+Eagle-Editor/mono-2.0-sgen.dll
+Eagle-Editor/shaderc_sharedd.dll
+Eagle-Editor/shaderc_shared.dll
+Eagle-Editor/zlib.dll
 Sandbox/Cache/*
 
 # Files
