Assets manipulation functionality (#118)
- Added shortcuts for asset manipulations
- `Project Selector` now enables VSync

--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -9,32 +9,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene Settings]
-Pos=2165,467
-Size=395,605
+Pos=2134,467
+Size=426,605
 Collapsed=0
 DockId=0x00000005,1
 
 [Window][Renderer Settings]
-Pos=2165,467
-Size=395,605
+Pos=2134,467
+Size=426,605
 Collapsed=0
 DockId=0x00000005,2
 
 [Window][Editor Preferences]
-Pos=2165,1074
-Size=395,303
+Pos=2134,1074
+Size=426,303
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Stats]
-Pos=2165,1074
-Size=395,303
+Pos=2134,1074
+Size=426,303
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Viewport]
 Pos=0,64
-Size=2163,1009
+Size=2132,1009
 Collapsed=0
 DockId=0x00000007,0
 
@@ -45,34 +45,33 @@ Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Scene Hierarchy]
-Pos=2165,64
-Size=395,401
+Pos=2134,64
+Size=426,401
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Properties]
-Pos=2165,467
-Size=395,605
+Pos=2134,467
+Size=426,605
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Content Browser]
 Pos=0,1075
-Size=2163,302
+Size=2132,302
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Texture Viewer]
-Pos=373,225
-Size=941,751
+Pos=489,227
+Size=979,751
 Collapsed=0
-DockId=0x0000000A,0
 
 [Window][Details]
-Pos=1316,225
-Size=361,751
+Pos=1288,60
+Size=275,783
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000E,0
 
 [Window][CPU Timings]
 Pos=59,58
@@ -86,17 +85,17 @@ Collapsed=0
 
 [Window][Help]
 Pos=699,201
-Size=959,227
+Size=954,334
 Collapsed=0
 
 [Window][GPU Memory usage]
-Pos=847,638
-Size=579,302
+Pos=748,534
+Size=760,465
 Collapsed=0
 
 [Window][Console]
 Pos=0,1075
-Size=2163,302
+Size=2132,302
 Collapsed=0
 DockId=0x00000008,1
 
@@ -106,23 +105,64 @@ Size=272,90
 Collapsed=0
 
 [Window][Eagle Editor]
-Pos=1084,646
-Size=392,84
+Pos=1144,643
+Size=272,90
+Collapsed=0
+
+[Window][Material Editor]
+Pos=1339,123
+Size=614,515
+Collapsed=0
+
+[Window][Texture Editor]
+Pos=60,60
+Size=1226,783
+Collapsed=0
+DockId=0x0000000B,0
+
+[Window][Physics Material Editor]
+Pos=399,238
+Size=488,276
+Collapsed=0
+
+[Window][Audio Editor]
+Pos=1017,682
+Size=492,338
+Collapsed=0
+
+[Window][Sound Group Editor]
+Pos=849,340
+Size=522,292
+Collapsed=0
+
+[Window][Entity Editor]
+Pos=891,449
+Size=517,503
+Collapsed=0
+
+[Window][Project Selector]
+Size=1600,900
+Collapsed=0
+DockId=0xBA151C62,0
+
+[Window][Project_DockspaceWindow]
+Size=1600,900
 Collapsed=0
 
 [Docking][Data]
-DockNode          ID=0x00000009 Pos=373,248 Size=1304,751 Split=X
-  DockNode        ID=0x0000000A Parent=0x00000009 SizeRef=941,424 Selected=0x5B2DE888
-  DockNode        ID=0x0000000B Parent=0x00000009 SizeRef=361,424 Selected=0xFC3EA205
+DockNode          ID=0x0000000A Pos=60,83 Size=1503,783 Split=X
+  DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=1226,310 Selected=0xA1271980
+  DockNode        ID=0x0000000E Parent=0x0000000A SizeRef=275,310 Selected=0xFC3EA205
 DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=Y Selected=0x13926F0B
   DockNode        ID=0x0000000C Parent=0xB8CD5F20 SizeRef=2560,40 HiddenTabBar=1 Selected=0x68C6FD75
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
-    DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2163,1355 Split=Y Selected=0x13926F0B
+    DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2132,1355 Split=Y Selected=0x13926F0B
       DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1009 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,302 Selected=0x49278EEE
-    DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=395,1355 Split=Y Selected=0x2E9237F7
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,302 Selected=0xBF096F38
+    DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=426,1355 Split=Y Selected=0x2E9237F7
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,401 Selected=0x2E9237F7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,910 Split=Y Selected=0x199AB496
         DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,605 Selected=0x199AB496
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,303 Selected=0x2E4EBCAA
+DockSpace         ID=0xBA151C62 Pos=138,161 Size=1600,900 CentralNode=1 Selected=0xF532CC21
 
