Added support for game builds
- Added Project Settings panel
- Added a way to set `project version` and `game startup scene`
- Added Skybox settings to the `Scene` class. Now `Scene` should be used to change any skybox related settings (previosly, you had to use `SceneRenderer`)
- Removed unused data from `Component` class, namely: component name; tags
- Removed `ShaderLibrary` and added `ShaderManager` that preloads sources of all the shaders
- Removed `EG_EDITOR_*` logging defines since they were the same as `EG_CORE_*`
- Removed `EG_WITH_EDITOR` defined
- Improved some components: now they're more lightweight since they don't inherit `Component` class anymore
- Entity Properties panel performance improvements
- Now `SetupFileAssociation` scripts requests admin privileges instead of silently failing
- Serialization API improvements
- Moved `Font` from `UI` folder to `Classes`
- Renamed `struct WindowProps` to `struct WindowProperties`
- SceneRenderer now "Presents" an image to be displayed in the window, when game build is used
- Fixed potential crashes when using "Show In Explorer"
- Fixed not updating width-height variables when changing window fullscreen-mode
- Fixed duplication of scene assets
- Fixed not resetting some data on application shutdown
- Fixed GPU timings related validation errors
- Fixed crash that could occur when minimizing the window
- Fixed incorrect "imgui.ini" being used sometimes
- Other minor changes and improvements

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ bin-int/
 Eagle-Editor/Engine/
 Eagle-Editor/Cache/*
 Eagle-Editor/Eagle-Editor.exe
+Eagle-Editor/Eagle-Game.exe
 Eagle-Editor/fmod.dll
 Eagle-Editor/fmodL.dll
 Eagle-Editor/mono-2.0-sgen.dll
