Project selector UI. Other improvements & fixes
- Project selector now has a proper UI (also displays the list of recent project)
- Added `UI::ImageButtonWithText` function
- Increased content browser items from `64x64` to `96x96`
- Content browser items now look better
- Updated `ImGui` lib (fixed some issues)
- Now project closes after `EditorLayer::OnDetach` is called
- Fixed users being able to drag simulation panel window
- Fixed not resetting script engine when closing a project
- Fixed a crash when changing editor's style
- Fixed content browser items not being spaced out uniformly in some cases

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bin/
 bin-int/
 Eagle-Editor/Engine/
 Eagle-Editor/Cache/*
+Eagle-Editor/Saved/*
 Eagle-Editor/Eagle-Editor.exe
 Eagle-Editor/Eagle-Game.exe
 Eagle-Editor/fmod.dll
