--- a/Eagle-Editor/imgui.ini
+++ b/Eagle-Editor/imgui.ini
@@ -105,8 +105,8 @@ Size=272,90
 Collapsed=0
 
 [Window][Eagle Editor]
-Pos=1084,646
-Size=392,84
+Pos=877,646
+Size=806,84
 Collapsed=0
 
 [Window][Material Editor]
@@ -141,14 +141,14 @@ Size=517,503
 Collapsed=0
 
 [Window][Project Selector]
-Pos=-216,-216
-Size=1600,900
+Pos=0,0
+Size=2560,1377
 Collapsed=0
 DockId=0xBA151C62,0
 
 [Window][Project_DockspaceWindow]
-Pos=-216,-216
-Size=1600,900
+Pos=0,0
+Size=2560,1377
 Collapsed=0
 
 [Window][Game Layer]
@@ -162,6 +162,11 @@ Size=426,605
 Collapsed=0
 DockId=0x00000005,3
 
+[Window][Eagle Projects]
+Pos=1144,630
+Size=272,117
+Collapsed=0
+
 [Docking][Data]
 DockNode          ID=0x0000000A Pos=60,83 Size=1503,783 Split=X
   DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=1226,310 Selected=0xA1271980
@@ -171,11 +176,11 @@ DockSpace         ID=0xB8CD5F20 Window=0x791B967D Pos=0,45 Size=2560,1355 Split=
   DockNode        ID=0x0000000D Parent=0xB8CD5F20 SizeRef=2560,1313 Split=X
     DockNode      ID=0x00000001 Parent=0x0000000D SizeRef=2132,1355 Split=Y Selected=0x13926F0B
       DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=2163,1008 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0xBF096F38
+      DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=2163,303 Selected=0x49278EEE
     DockNode      ID=0x00000002 Parent=0x0000000D SizeRef=426,1355 Split=Y Selected=0x2E9237F7
       DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=395,401 Selected=0x2E9237F7
       DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=395,910 Split=Y Selected=0x199AB496
         DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=395,605 Selected=0x199AB496
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=395,303 Selected=0x2E4EBCAA
-DockSpace         ID=0xBA151C62 Pos=216,239 Size=1600,900 CentralNode=1 Selected=0xF532CC21
+DockSpace         ID=0xBA151C62 Window=0xFDC19C07 Pos=0,23 Size=2560,1377 CentralNode=1 HiddenTabBar=1 Selected=0xF532CC21
 
